Completed: Assignment 2 | Easy
- Bg Color Changer

--- a/Assignment-01/assignment-2/easy/bg-color-changer/index.html
+++ b/Assignment-01/assignment-2/easy/bg-color-changer/index.html
@@ -7,14 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="color-palette">
-        <div class="color" style="--bg-color: violet; background-color: var(--bg-color);"></div>
-        <div class="color" style="--bg-color: indigo; background-color: var(--bg-color);"></div>
-        <div class="color" style="--bg-color: blue; background-color: var(--bg-color);"></div>
-        <div class="color" style="--bg-color: green; background-color: var(--bg-color);"></div>
-        <div class="color" style="--bg-color: yellow; background-color: var(--bg-color);"></div>
-        <div class="color" style="--bg-color: orange; background-color: var(--bg-color);"></div>
-        <div class="color" style="--bg-color: red; background-color: var(--bg-color);"></div>
+    <div class="container">
+        <div class="color-palette">
+            <div class="color" style="--bg-color: violet; background-color: var(--bg-color);"></div>
+            <div class="color" style="--bg-color: indigo; background-color: var(--bg-color);"></div>
+            <div class="color" style="--bg-color: blue; background-color: var(--bg-color);"></div>
+            <div class="color" style="--bg-color: green; background-color: var(--bg-color);"></div>
+            <div class="color" style="--bg-color: yellow; background-color: var(--bg-color);"></div>
+            <div class="color" style="--bg-color: orange; background-color: var(--bg-color);"></div>
+            <div class="color" style="--bg-color: red; background-color: var(--bg-color);"></div>
+        </div>
+        <div class="add-color-container">
+            <input id="input-color" type="text">
+            <div class="add-color">
+                <img src="./add.svg" alt="">
+            </div>
+        </div>
     </div>
+    <div class="test"></div>
 </body>
+<script src="script.js"></script>
 </html>
