Continued: Assignment 2 | Easy
- Quiz App, completed the js logic

--- a/Assignment-01/assignment-2/easy/quiz-app/index.html
+++ b/Assignment-01/assignment-2/easy/quiz-app/index.html
@@ -10,9 +10,9 @@
     <div class="question-box">
         <div class="question"></div>
         <div class="options"></div>
-        <div class="submit-btn"></div>
+        <div class="submit-btn">Submit</div>
     </div>
 </body>
-<script type="module" src="data.js"></script>
-<script src="script.js"></script>
+<script src="data.js"></script>
+<script type="module" src="script.js"></script>
 </html>
