Started: Assignment 2 | Easy | Pokemon
- Made the card design for pokemon card

--- a/Assignment-01/assignment-2/easy/The-Pokémon/index.html
+++ b/Assignment-01/assignment-2/easy/The-Pokémon/index.html
@@ -1,13 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <img src="1000.svg" width="400px" alt="">
-</body>
-<script src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="heading"></div>
+      <div class="all-cards-container">
+        <div class="card-container">
+          <div class="card-content">
+            <div class="pokemon-image-container">
+                <img src="./1000.svg" alt="" srcset="">
+            </div>
+            <div class="pokemon-name">GHOLDENGO</div>
+            <div class="pokemon-types">
+              <div class="type1 type-styles">Steel</div>
+              <div class="type2 type-styles">Ghost</div>
+            </div>
+          </div>
+          <!-- <div class="pokemon-details-section">
+            <div class="pokemon-name">GHOLDENGO</div>
+            <div class="pokemon-metrics">
+                <div class="pokemon-id">
+                    <span>ID</span><span>1000</span>
+                </div>
+                <div class="pokemon-height">
+                    <span>Height</span><span>12</span>
+                </div>
+                <div class="pokemon-weight">
+                    <span>Weight</span><span>300</span>
+                </div>
+            </div>
+            <div class="pokemon-types">
+              <div class="type1">Steel</div>
+              <div class="type2">Ghost</div>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="script.js"></script>
 </html>
